2015-01-05 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: adding macro APU_HANDLING for OS where apr-utils have a different installation
    directory
    * src/Makefile.am: new macro symbols APU_INCLUDES and APU_CFLAGS

2014-12-22 Massimo Manghi <mxmanghi@apache.org>
    * tests/headers.test: add test for command 'headers get'
    * src/Tclweb.h: new definition for functions TclWeb_OutputHeaders[Set|Get]
    * src/config/Tclwebapache.h: New functions TclWeb_OutputHeaders[Set|Get]
    * src/rivetcmds/rivetCore.c: new subcommand '::rivet::headers get'
    * tclconfig/libtool.m4: new script for libtool

2014-12-18 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/redirect.tcl: adding Damon's redirect command based on direct manipulation
    of the headers
    * src/rivetcmds/rivetCore.c: adding command [::rivet::headers sent] providing basic introspection
    for the I/O buffer internal status
    * src/apache-2/mod_rivet.c: moving Tcl_Flush from Rivet_ExecuteAndCheck to the very end of 
    Rivet_SendContent, avoiding multiple calls in case ::rivet::parse is called.
    * src/experimental: removing it from this branch. Threaded code will be developed in trunk for
    rivet 2.3

2014-08-04 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: adding support for --with-rivet-channel switch for alternate implementations
    of a Rivet Tcl channel
    * src/: further modularized to make refactoring a bit easier. But it's still the code
    we released as 2.2.0

2014-07-14 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/mod_rivet.c: working toy module capable of running Tcl scripts with a worker MPM
    * src/experimental/rivetChannel.c: now depending on the thread private data

2014-07-17 Massimo Manghi <mxmanghi@apache.org>
    * src/channel/rivetChannel.[c|h]: add preprocessor symbol to prevent multiple includes

2014-07-16 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental: add experimental code for threaded module
